v0.9.1 - TBD
- Fixed issue with logging not working when set from px.ini - #204
- Fixed issue with environment variables not propagating to all processes in Linux
- Documented how to install binary version of Px on Windows without running in a
  console window - #203

v0.9.0 - 2024-01-25
- Added support for domains in noproxy - #2
- Expanded noproxy to work in all proxy modes - #177
- Added --test to verify Px configuration
- Windows binary now created with embeddable Python to avoid being flagged
  by virus scanners - #182 #197
- Added support for Python 3.11 and 3.12, removed Python 2.7
- Fixed #183 - keyring import on OSX
- Fixed #187 - removed dependency on keyring_jeepney which is deprecated
- Fixed #188 - removed keyrings.alt and added docs for leveraging third
  party keyring backends
- Added support to load Px flags from environment variables and dotenv files
- Changed loading order of px.ini - from CLI flag first, environment next,
  working directory and finally from the Px directory
- Fixed #200 - print debug messages when --gateway or --hostonly overrides
  listen and allow rules
- Fixed #199 - cache auth mechanism that libcurl discovers and uses with
  upstream proxy - speeds up transactions and avoids POST/PUT rewind issue
- Added support to log to the working directory - #189. Logging destination now
  configurable via CLI, env and px.ini.
- Added --restart to quit Px and start a new instance - #185
- Fixed #184 - PAC proxy list was including blank entries
- Fixed #152 - increased number of default threads from 5 to 32
- Fixed issue leading to connection reuse by client after HTTPS connection was
  closed by server
- Mapped additional libcurl errors to HTTP errors to inform client
- Added support to listen on multiple interfaces - #195
- Added support for --auth=NONE which defers all authentication to the client,
  allowing multiple instances of Px to be chained together to access an upstream
  proxy that is not directly connected