@@ -2,6 +2,7 @@
 
 import socket
 import sys
+import threading
 
 try:
     import quickjs
@@ -18,7 +19,8 @@ dprint = lambda x: None
 class Pac:
     "Load and run PAC files using quickjs"
 
-    ctxt = None
+    _ctxt = None
+    _lock = None
 
     def __init__(self, debug_print = None):
         "Initialize a quickjs context with default PAC utility functions"
@@ -26,23 +28,33 @@ class Pac:
         if debug_print is not None:
             dprint = debug_print
 
-        self.ctxt = quickjs.Context()
+        self._ctxt = quickjs.Context()
+        self._lock = threading.Lock()
 
         dprint("Loading PAC utils")
 
         # Load Python callables
         for func in [self.alert, self.dnsResolve, self.myIpAddress]:
-            self.ctxt.add_callable(func.__name__, func)
+            self._ctxt.add_callable(func.__name__, func)
 
         # Load PAC js utils
-        self.ctxt.eval(PACUTILS)
+        self._ctxt.eval(PACUTILS)
+
+    def __del__(self):
+        "Release quickjs context"
+        if self._lock is not None:
+            if self._ctxt is not None:
+                with self._lock:
+                    self._ctxt = None
+            self._lock = None
 
     def load(self, pac_data, pac_encoding):
         "Load PAC data in specified encoding into this context"
         pac_encoding = pac_encoding or "utf-8"
         text = pac_data.decode(pac_encoding)
         try:
-            self.ctxt.eval(text)
+            with self._lock:
+                self._ctxt.eval(text)
         except quickjs.JSException as exc:
             dprint(f"PAC file parsing failed - syntax error or file not encoded in {pac_encoding}")
             dprint("Use --pac_encoding or proxy:pac_encoding in px.ini to change")
@@ -71,7 +83,9 @@ class Pac:
         Return comma-separated list of proxy servers to use for this url
             DIRECT can be returned as one of the options in the response
         """
-        proxies = self.ctxt.eval("FindProxyForURL")(url, host)
+        dprint(f"Finding proxy for {url}")
+        with self._lock:
+            proxies = self._ctxt.eval("FindProxyForURL")(url, host)
 
         # Fix #160 - convert PAC return values into CURLOPT_PROXY schemes
         for ptype in ["PROXY", "HTTP"]:
